infrastructure/k8s/fastapi/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-server
  template:
    metadata:
      labels:
        app: fastapi-server
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: fastapi-app
          image: benjyfeffer/open-shift-data-loader:latest
          ports:
            - containerPort: 8000
