infrastructure/k8s/fastapi/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  labels:
    app: fastapi-server
    deployment: fastapi-server
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: fastapi-server
